@@ -1,5 +1,6 @@
 #!/usr/bin/python
 
+from build_bam import build_bam
 import fileinput
 from optparse import OptionParser
 import os
@@ -91,39 +92,6 @@ def update_version_numbers_in_files(options):
                 print line,
     finally:
         fileinput.close()
-
-
-def build_software(options):
-    print >>sys.stdout, "Starting build in %s" % os.getcwd()
-    sys.stdout.flush()
-    build_args = []
-    if options.coveritypath:
-        os.environ["PATH"] += os.pathsep + options.coveritypath
-        build_args.extend(["cov-build", "--dir", "cov-int"])
-        if os.path.isdir('cov-int'):
-            shutil.rmtree('cov-int')
-    if platform.system() == "Windows":
-        # assume Visual Studio 2013
-        if os.environ.has_key("ProgramFiles(x86)"):
-            buildtool = r"C:\Program Files (x86)\MSBuild\12.0\bin\MSBuild.exe"
-        else:
-            buildtool = r"C:\Program Files\MSBuild\12.0\bin\MSBuild.exe"
-        if not os.path.isfile(buildtool):
-            raise RuntimeError("Unable to locate msbuild at '%s'" % buildtool)
-        build_args.append(buildtool)
-    elif platform.system() == "Darwin" or platform.system() == "Linux":
-        # xbuild is now redundant
-        build_args.append("msbuild")
-    else:
-        raise RuntimeError("Unrecognized platform, %s" % platform.system())
-    build_args.extend(["/property:Configuration=Release", "/nologo", "BuildAMation.sln"])
-    if options.coveritypath:
-        build_args.append("/t:Rebuild")
-    print >>sys.stdout, "Running command: %s" % ' '.join(build_args)
-    sys.stdout.flush()
-    subprocess.check_call(build_args)
-    print >>sys.stdout, "Finished build"
-    sys.stdout.flush()
 
 
 def build_documentation(options):
@@ -263,7 +231,7 @@ def main(options):
         remove_unnecessary_files_from_clone()
         update_version_numbers_in_files(options)
     try:
-        build_software(options)
+        build_bam(cwd, options.coveritypath)
         build_documentation(options)
         make_coverity_distribution(options)
         make_tar_distribution(options)
